--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-# evaluare
 <html>
   <head)
          <title>Master</title>
   </head>
   <body>
-    <h1>Every body will cung-fu fighting!</h1>
+    <h1>Everybody was cung-fu fighting!</h1>
   </body>
 </html>
