--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head)
-         <title>Master</title>
+         <title>NO TITLE</title>
   </head>
   <body>
     <h1>Everybody was cung-fu fighting!</h1>
